--- a/playbook.yaml
+++ b/playbook.yaml
@@ -140,7 +140,7 @@
         group: root
         state: link
 
-    - name: Install Exe {{ item }}
+    - name: Install Exe provide_certs.sh and setup_css.sh
       ansible.builtin.copy:
         src: "files_css/{{ item }}"
         dest: "/usr/local/bin/{{ item }}"
@@ -153,7 +153,7 @@
 
     # TODO check ${base_dir} in setup_css.sh
 
-    - name: Install Systemd Service {{ item }}
+    - name: Install Systemd Services
       ansible.builtin.copy:
         src: "files_css/{{ item }}.service"
         dest: "/etc/systemd/system/{{ item }}.service"
@@ -165,10 +165,10 @@
          - css
          - auth-cache-webserver
 
-    - name: Install Base Systemd Service for css
+    - name: Install Template Systemd Service for css
       ansible.builtin.copy:
         src: "files_css/css.service.base"
-        dest: "/etc/systemd/system/css.service.base"
+        dest: "/etc/systemd/system/css.service.template"
         owner: root
         group: root
         mode: u=rw,g=r,o=r
@@ -178,7 +178,35 @@
         daemon_reload: true
 
     # install_css_populate.sh
-    # TODO
+
+    - name: clone css-populate
+      ansible.builtin.git:
+        repo: https://github.com/SolidLabResearch/css-populate.git
+        dest: /usr/local/src/css-populate
+
+    - name: "Install css-populate"
+      community.general.npm:
+        global: true
+        path: /usr/local/src/css-populate
+
+    - name: 'Copy dummy RDF'
+      ansible.builtin.copy:
+        src: "files_all/infobox-properties_lang=nl__head75000_10MB.nt.gz"
+        dest: "/usr/local/share/infobox-properties_lang=nl__head75000_10MB.nt.gz"
+        owner: root
+        group: root
+        mode: u=rw,g=r,o=r
+
+    - name: 'Decompress dummy RDF'
+      ansible.builtin.shell: |
+         #!/bin/bash -e
+        
+         gzip --to-stdout -d "infobox-properties_lang=nl__head75000_10MB.nt.gz" > "infobox-properties_lang=nl__head75000_10MB.nt"
+         head -n 7500 "infobox-properties_lang=nl__head75000_10MB.nt" > "infobox-properties_lang=nl__head7500_1MB.nt"
+         head -n 750 "infobox-properties_lang=nl__head75000_10MB.nt" > "infobox-properties_lang=nl__head750_100kB.nt"
+      args:
+        chdir: /usr/local/share/
+        creates: /usr/local/share/infobox-properties_lang=nl__head75000_10MB.nt
 
     # install_redis.sh
 
