--- a/playbook.yaml
+++ b/playbook.yaml
@@ -4,34 +4,43 @@
   vars_files:
     - ansible-variables.yaml
   tasks:
+#    - name: Print all available facts
+#      ansible.builtin.debug:
+#        var: ansible_facts
+
+    - name: Check python version
+      ansible.builtin.fail:
+        msg: "The system python version {{ ansible_facts['python_version' ]}} is too old. Python 3.11 or newer is required."
+      when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
+
     - name: Prevent NetworkManager from being installed
       ansible.builtin.copy:
-        content: | 
+        content: |
           Package: network-manager
           Pin: release *
           Pin-Priority: -1
         dest: /etc/apt/preferences.d/no-network-manager
-    
-    - name: Install utils 
+
+    - name: Install utils
       ansible.builtin.apt:
         pkg: [ 'git', 'apt-transport-https', 'ca-certificates', 'curl', 'software-properties-common', 'openssl', 'wget', 'gnupg', 'tmux', 'vim', 'build-essential', 'ncdu', 'lsb-release', 'jq']
         update_cache: yes
-    
+
     - name: Prevent systemd from filling /var/log/syslog
       ansible.builtin.lineinfile:
         path: /etc/systemd/journald.conf
         state: present
         regexp: '^ForwardToSyslog=no'
         line: 'ForwardToSyslog=no'
-    
+
     - name: Install xterm-kitty terminfo
-      ansible.builtin.get_url: 
-         url: https://github.com/kovidgoyal/kitty/raw/master/terminfo/x/xterm-kitty
-         dest: /usr/share/terminfo/x/xterm-kitty
-         owner: root
-         group: root
-         mode: u=rw,g=r,o=r
-    
+      ansible.builtin.get_url:
+        url: https://github.com/kovidgoyal/kitty/raw/master/terminfo/x/xterm-kitty
+        dest: /usr/share/terminfo/x/xterm-kitty
+        owner: root
+        group: root
+        mode: u=rw,g=r,o=r
+
     - name: Set an ID for the node in /etc/nickname
       ansible.builtin.copy:
         content: test
@@ -110,13 +119,28 @@
         repo: deb https://deb.nodesource.com/node_16.x {{ ansible_distribution_release }} main
         update_cache: yes
 
+    - name: Prefer deb.nodesource.com over official
+      ansible.builtin.copy:
+        content: |
+          Package: nodejs
+          Pin: origin "deb.nodesource.com"
+          Pin-Priority: 1001
+        dest: /etc/apt/preferences.d/prefer-nodesource
+
     - name: "Install nodejs 16"
       ansible.builtin.apt:
-        update_cache: yes
         name:
-           - nodejs
-           - npm
+          - nodejs
         state: present
+
+    - name: Fetch nodejs version
+      ansible.builtin.shell: 'node --version'
+      register: nodejs_version
+
+    - name: Check nodejs version
+      ansible.builtin.fail:
+        msg: "The nodejs version install {{ nodejs_version }} is not the expected version 16."
+      when: (not (nodejs_version.stdout | regex_search("^16."))) and (not (nodejs_version.stdout | regex_search("^v16.")))
 
     - name: Install "typescript" node.js package.
       community.general.npm:
@@ -166,7 +190,7 @@
         group: root
         mode: u=rwx,g=rx,o=rx
       loop:
-         - provide_certs.sh
+        - provide_certs.sh
       when: css_use_https
 
     - name: Install Exe setup_css.sh
@@ -177,7 +201,7 @@
         group: root
         mode: u=rwx,g=rx,o=rx
       loop:
-         - setup_css.sh
+        - setup_css.sh
 
     - name: Install setup_css.env
       ansible.builtin.copy:
@@ -187,8 +211,6 @@
         group: root
         # writable by all!
         mode: u=rw,g=rw,o=rw
-
-    # TODO check ${base_dir} in setup_css.sh
 
     - name: Install css Systemd Services
       ansible.builtin.copy:
@@ -244,11 +266,11 @@
 
     - name: 'Decompress dummy RDF'
       ansible.builtin.shell: |
-         #!/bin/bash -e
+        #!/bin/bash -e
         
-         gzip --to-stdout -d "infobox-properties_lang=nl__head75000_10MB.nt.gz" > "infobox-properties_lang=nl__head75000_10MB.nt"
-         head -n 7500 "infobox-properties_lang=nl__head75000_10MB.nt" > "infobox-properties_lang=nl__head7500_1MB.nt"
-         head -n 750 "infobox-properties_lang=nl__head75000_10MB.nt" > "infobox-properties_lang=nl__head750_100kB.nt"
+        gzip --to-stdout -d "infobox-properties_lang=nl__head75000_10MB.nt.gz" > "infobox-properties_lang=nl__head75000_10MB.nt"
+        head -n 7500 "infobox-properties_lang=nl__head75000_10MB.nt" > "infobox-properties_lang=nl__head7500_1MB.nt"
+        head -n 750 "infobox-properties_lang=nl__head75000_10MB.nt" > "infobox-properties_lang=nl__head750_100kB.nt"
       args:
         chdir: /usr/local/share/
         creates: /usr/local/share/infobox-properties_lang=nl__head75000_10MB.nt
@@ -285,3 +307,34 @@
         global: true
         path: /usr/local/src/css-flood
       when: install_server_css_flood
+
+    # Start CSS
+
+    - name: Set defaults in setup_css.env
+      ansible.builtin.lineinfile:
+        path: /usr/local/etc/setup_css.env
+        regexp: '^GIT_CHECKOUT_ARG='
+        line: GIT_CHECKOUT_ARG={{ css_default_checkout_arg }}
+
+    - name: Set defaults in setup_css.env
+      ansible.builtin.lineinfile:
+        path: /usr/local/etc/setup_css.env
+        regexp: '^GENERATE_USERS='
+        line: GENERATE_USERS={{ css_default_generate_users }}
+
+    - name: Set defaults in setup_css.env
+      ansible.builtin.lineinfile:
+        path: /usr/local/etc/setup_css.env
+        regexp: '^GENERATE_CONTENT='
+        line: GENERATE_CONTENT={{ css_default_generate_content }}
+
+    - name: Set defaults in setup_css.env
+      ansible.builtin.lineinfile:
+        path: /usr/local/etc/setup_css.env
+        regexp: '^SERVER_FACTORY='
+        line: SERVER_FACTORY={{ 'https' if css_use_https else 'http' }}
+
+    - name: Start CSS
+      shell: setup_css.sh
+      when: start_css
+      timeout: "{{ 20 * 60 }}"
