--- a/playbook.yaml
+++ b/playbook.yaml
@@ -50,13 +50,23 @@
 
     - name: Check if https is possible
       ansible.builtin.fail:
-        msg: If https is required, the host needs a DNS name
-      when: ( css_use_https and not use_dns )
+        msg: If https is required, the host needs a valid FQDN
+      when: ( css_use_https and not has_fqdn )
 
     - name: Check python version
       ansible.builtin.fail:
         msg: "The system python version {{ ansible_facts['python_version' ]}} is too old. Python 3.11 or newer is required."
       when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
+
+    - name: Store system FQDN in /etc/host_fqdn
+      # This way, all scripts always have this easily available
+      ansible.builtin.copy:
+        content: "{{ chosen_fqdn }}"
+        dest: /etc/host_fqdn
+        owner: root
+        group: root
+        mode: u=rw,g=r,o=r
+      when: ( has_fqdn )
 
     - name: Prevent NetworkManager from being installed
       ansible.builtin.copy:
