--- a/espec/{{cookiecutter.espec_name}}/experiment-specification.yaml
+++ b/espec/{{cookiecutter.espec_name}}/experiment-specification.yaml
@@ -46,12 +46,21 @@ execute:
      path: expand-root-disk-caller.sh
    - bundled: scripts/utils.sh
      sudo: true
+   - direct: |
+        #!/bin/bash -xe
+        
+        # This script is idempotent
+        
+        DEBIAN_FRONTEND=noninteractive apt-get update
+        DEBIAN_FRONTEND=noninteractive apt-get install -y -f python3 python3-venv python3-pip
+     sudo: true
+     path: upgrade-python.sh
 ansible:
     host:
        type: EXISTING
        name: css0
-       galaxy-command: /usr/bin/ansible-galaxy
-       playbook-command: /usr/bin/ansible-playbook
+       galaxy-command: /usr/local/bin/ansible-galaxy
+       playbook-command: /usr/local/bin/ansible-playbook
        execute: scripts/setup_ansible.sh
     galaxy:
        - '../../ansible-galaxy-requirements.yaml'
