--- a/playbook.yaml
+++ b/playbook.yaml
@@ -53,10 +53,10 @@
         msg: If https is required, the host needs a valid FQDN
       when: ( css_use_https and not has_fqdn )
 
-    - name: Check python version
-      ansible.builtin.fail:
-        msg: "The system python version {{ ansible_facts['python_version' ]}} is too old. Python 3.11 or newer is required."
-      when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
+#    - name: Check python version
+#      ansible.builtin.fail:
+#        msg: "The system python version {{ ansible_facts['python_version' ]}} is too old. Python 3.11 or newer is required."
+#      when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
 
     - name: Store system FQDN in /etc/host_fqdn
       # This way, all scripts always have this easily available
@@ -123,13 +123,39 @@
       community.general.timezone:
         name: Europe/Brussels
 
-    - name: Install python
+    - name: Install python pip/venv
       ansible.builtin.apt:
         pkg:
           - python3
           - pip
           - python3-venv
         update_cache: yes
+      when: (ansible_facts['python']['version']['major'] == 3) and (ansible_facts['python']['version']['minor'] >= 11)
+
+    - name: Remember python3.11 or newer was already installed
+      ansible.builtin.set_fact:
+        python_exe: "/usr/bin/python"
+      when: (ansible_facts['python']['version']['major'] == 3) and (ansible_facts['python']['version']['minor'] >= 11)
+
+    - name: Add deadsnakes ppa
+      ansible.builtin.apt_repository:
+        repo: ppa:deadsnakes/ppa
+#        repo: deb http://ppa.launchpad.net/deadsnakes/ppa/ubuntu {{ ansible_distribution_release }} main
+        state: present
+      when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
+
+    - name: Install python3.11 via deadsnakes ppa
+      ansible.builtin.apt:
+        pkg:
+          - python3.11
+          - python3.11-venv
+        update_cache: yes
+      when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
+
+    - name: Remember python3.11 is installed via deadsnakes ppa
+      ansible.builtin.set_fact:
+        python_exe: "/usr/bin/python3.11"
+      when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
 
     - name: Create /usr/local/venv/
       ansible.builtin.file:
@@ -147,7 +173,7 @@
       ansible.builtin.pip:
         name:
           - file:///usr/local/src/solidlab-perfstat/
-        virtualenv_command: '/usr/bin/python3 -m venv'
+        virtualenv_command: '{{ python_exe }} -m venv'
         virtualenv: /usr/local/venv/solidlab-perfstat/
       when: install_perfstat
 
