--- a/ansible-variables.yaml
+++ b/ansible-variables.yaml
@@ -4,7 +4,7 @@ install_server_css_populate: false
 install_server_css_flood: false
 start_css: true
 start_auth_cache_webserver: false
-css_use_https: false
+css_use_https: true
 css_default_checkout_arg: main
 css_default_generate_users: false
 css_default_generate_content: false
