--- a/playbook.yaml
+++ b/playbook.yaml
@@ -415,6 +415,19 @@
         regexp: '^SERVER_FACTORY='
         line: SERVER_FACTORY={{ 'https' if css_use_https else 'http' }}
 
+    # Don't do this: variables starting with CSS_ are seen as args by CSS
+#    - name: Set defaults in setup_css.env
+#      ansible.builtin.lineinfile:
+#        path: /usr/local/etc/setup_css.env
+#        regexp: '^CSS_PUBLIC_DNS_NAME='
+#        line: CSS_PUBLIC_DNS_NAME='{{ '' if css_use_https else 'localhost' }}'
+
+    - name: Set OVERRIDE_BASE_URL in setup_css.env
+      ansible.builtin.lineinfile:
+        path: /usr/local/etc/setup_css.env
+        regexp: '^OVERRIDE_BASE_URL='
+        line:  OVERRIDE_BASE_URL='{{ base_url }}'
+
     - name: Start CSS
       shell: setup_css.sh
       when: start_css
