--- a/roles/python/tasks/main.yaml
+++ b/roles/python/tasks/main.yaml
@@ -1,35 +1,43 @@
-- name: Install python pip/venv
-  ansible.builtin.apt:
-    pkg:
-      - python3
-      - pip
-      - python3-venv
-    update_cache: yes
+#    - name: Check python version
+#      ansible.builtin.fail:
+#        msg: "The system python version {{ ansible_facts['python_version' ]}} is too old. Python 3.11 or newer is required."
+#      when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
+
+- name: Handle python recent enough
+  block:
+    - name: Install python pip/venv
+      ansible.builtin.apt:
+        pkg:
+          - python3
+          - pip
+          - python3-venv
+        update_cache: yes
+
+    - name: Remember python3.11 or newer was already installed
+      ansible.builtin.set_fact:
+        python_exe: "/usr/bin/python"
+
   when: (ansible_facts['python']['version']['major'] == 3) and (ansible_facts['python']['version']['minor'] >= 11)
 
-- name: Remember python3.11 or newer was already installed
-  ansible.builtin.set_fact:
-    python_exe: "/usr/bin/python"
-  when: (ansible_facts['python']['version']['major'] == 3) and (ansible_facts['python']['version']['minor'] >= 11)
+- name: Handle python too old by installing 3.11
+  block:
+    - name: Add deadsnakes ppa
+      ansible.builtin.apt_repository:
+        repo: ppa:deadsnakes/ppa
+    #        repo: deb http://ppa.launchpad.net/deadsnakes/ppa/ubuntu {{ ansible_distribution_release }} main
+        state: present
 
-- name: Add deadsnakes ppa
-  ansible.builtin.apt_repository:
-    repo: ppa:deadsnakes/ppa
-#        repo: deb http://ppa.launchpad.net/deadsnakes/ppa/ubuntu {{ ansible_distribution_release }} main
-    state: present
-  when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
+    - name: Install python3.11 via deadsnakes ppa
+      ansible.builtin.apt:
+        pkg:
+          - python3.11
+          - python3.11-venv
+        update_cache: yes
 
-- name: Install python3.11 via deadsnakes ppa
-  ansible.builtin.apt:
-    pkg:
-      - python3.11
-      - python3.11-venv
-    update_cache: yes
-  when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
+    - name: Remember python3.11 is installed via deadsnakes ppa
+      ansible.builtin.set_fact:
+        python_exe: "/usr/bin/python3.11"
 
-- name: Remember python3.11 is installed via deadsnakes ppa
-  ansible.builtin.set_fact:
-    python_exe: "/usr/bin/python3.11"
   when: (ansible_facts['python']['version']['major'] != 3) or (ansible_facts['python']['version']['minor'] < 11)
 
 - name: Create /usr/local/venv/
