wip: adding kss support

--- a/espec/{{cookiecutter.espec_name}}/jfed-cli2-fetch-urls.yaml
+++ b/espec/{{cookiecutter.espec_name}}/jfed-cli2-fetch-urls.yaml
@@ -2,7 +2,7 @@
 action: SSHFETCH
 localTargetDir: <<GENERATED_DIR>>
 merge: true
-remoteFile: /usr/local/share/css_url
+remoteFile: /usr/local/share/ss_url
 slice:
   failIfNoProject: true
   failOnExistingSlice: false
