--- a/roles/certbot/tasks/main.yaml
+++ b/roles/certbot/tasks/main.yaml
@@ -1,18 +1,18 @@
 - name: "Install snapd"
   ansible.builtin.apt:
     name: snapd
-  when: css_use_https
+  when: ss_use_https
 
 - name: Install snap core
   community.general.snap:
     name: core
-  when: css_use_https
+  when: ss_use_https
 
 - name: Install certbot
   community.general.snap:
     name: certbot
     classic: true
-  when: css_use_https
+  when: ss_use_https
 
 - name: Link certbot exe
   ansible.builtin.file:
@@ -21,4 +21,4 @@
     owner: root
     group: root
     state: link
-  when: css_use_https
+  when: ss_use_https
