--- a/ansible-variables.yaml
+++ b/ansible-variables.yaml
@@ -1,6 +1,8 @@
 ---
-css_use_https: false
-start_css: true
+#ss_type: kss
+ss_type: css
+ss_use_https: false
+start_ss: true
 css_default_checkout_arg: main
 install_perfstat: false
 install_server_css_populate: false
